# sp_fafa_tools

./: .gitignore  README.md  pyproject.toml
app/control/: download_img_from_1688.py  download_img_from_xiapibuy.py
app/view/: ali1688.py  forAli1688  forUse  xiapi.py
