[tool.poetry]
name = "sp-fafa-local-tools"
version = "0.1.0"
description = "我的电商帝国用到的一些脚本"
authors = ["luguanzong-git <746722756@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
